<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:title="@string/about">
    </item>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"
        android:title="@string/setting">
    </item>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout_svgrepo_com"
        app:showAsAction="never"
        android:title="@string/logout">
    </item>
</menu>