<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.healthlog.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_doctor"
        android:name="com.example.healthlog.ui.doctor.DoctorFragment"
        android:label="@string/title_doctor"
        tools:layout="@layout/fragment_doctor" />

    <fragment
        android:id="@+id/navigation_hospitals"
        android:name="com.example.healthlog.ui.hospital.HospitalFragment"
        android:label="@string/title_hospital"
        tools:layout="@layout/fragment_hospital" />
</navigation>
